AC_INIT(main.cpp)
AM_INIT_AUTOMAKE(sanePos,0.0.1)
AM_CONFIG_HEADER(config.h)
AM_PROG_LIBTOOL

AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_ARG_ENABLE([mpi],
[  --enable-mpi    Turn on MPI compiling],
[case "${enableval}" in
   yes) mpi=true ;;
   no)  mpi=false ;;
   *) AC_MSG_ERROR([bad value ${enableval} for --enable-mpi]) ;;
esac],[mpi=false])

if test x$mpi = xtrue; then
check_mpi=mpicxx
else
check_mpi=
fi


AC_ARG_ENABLE([para],
[  --enable-para    Turn on MPI compiling],
[case "${enableval}" in
   yes) para=true ;;
   no)  para=false ;;
   *) AC_MSG_ERROR([bad value ${enableval} for --enable-para]) ;;
esac],[para=false])



if test x$para = xtrue; then
check_mpi2=mpicxx
fi

AC_PROG_CXX([$check_mpi $check_mpi2])
AC_LANG_CPLUSPLUS


AC_CHECK_HEADERS(cstring,,AC_MSG_WARN(STL classes missing ?))
AC_CHECK_HEADERS(fcntl.h,,AC_MSG_WARN(STL classes missing ?))
AC_CHECK_HEADERS(list,,AC_MSG_WARN(STL classes missing ?))
AC_CHECK_HEADERS(stdio.h,,AC_MSG_WARN(STL classes missing ?))
AC_CHECK_HEADERS(time.h,,AC_MSG_WARN(STL classes missing ?))
AC_CHECK_HEADERS(wcslib/cel.h,,AC_MSG_WARN(wcslib missing ?))
AC_CHECK_HEADERS(wcslib/prj.h,,AC_MSG_WARN(wcslib missing ?))
AC_CHECK_HEADERS(wcslib/wcshdr.h,,AC_MSG_WARN(wcslib missing ?))
AC_CHECK_HEADERS(wcslib/wcs.h,,AC_MSG_WARN(wcslib missing ?))
AC_CHECK_HEADERS(wcslib/wcsmath.h,,AC_MSG_WARN(wcslib missing ?))
AC_CHECK_HEADERS(wcslib/wcstrig.h,,AC_MSG_WARN(wcslib missing ?))



AM_CONDITIONAL([MPC], [test x$mpi = xtrue])
AM_CONDITIONAL([MPC2], [test x$para = xtrue])


AC_OUTPUT(Makefile)
