bin_PROGRAMS = sanePre

sanePre_CPPFLAGS = $(NR_INCLUDE) $(INIPARSER_INCLUDE) $(DEBUG) \
	$(SANEIO_INCLUDE)
sanePre_LDADD    = $(NR_LIB) $(INIPARSER_LIB)  $(LIBS)  \
	$(SANEIO_LIB)

if PARAFRAME
   sanePre_CPPFLAGS += -DPARA_FRAME -DUSE_MPI
   ext=_PARA_FRAME
endif

if PARABOLO
   sanePre_CPPFLAGS += -DPARA_FRAME -DUSE_MPI
   ext=_PARA_FRAME
endif

EXEEXT=$(ext)

sanePre_SOURCES = \
main.cpp
